feat:新增平台公共能力